// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`field-container can mount field container 1`] = `
<div id="app">
	<div class="SharpFieldContainer SharpForm__form-item">
		<label class="SharpForm__label">
			My beautiful field
			<!---->
		</label>
		<div>Template field</div>
		<div class="SharpForm__form-requirement"></div>
		<small class="SharpForm__help-message">Do not fill this field</small>
	</div>
</div>
`;

exports[`field-container can mount field container with error 1`] = `
<div id="app">
	<div class="SharpFieldContainer SharpForm__form-item SharpForm__form-item--danger">
		<label class="SharpForm__label">
			My beautiful field
			<!---->
		</label>
		<div>Template field</div>
		<div class="SharpForm__form-requirement">Must be a number</div>
		<small class="SharpForm__help-message">Do not fill this field</small>
	</div>
</div>
`;

exports[`field-container can mount field container with extra style 1`] = `
<div id="app">
	<div class="SharpFieldContainer SharpForm__form-item" style="background: red;">
		<label class="SharpForm__label">
			My beautiful field
			<!---->
		</label>
		<div>Template field</div>
		<div class="SharpForm__form-requirement"></div>
		<small class="SharpForm__help-message">Do not fill this field</small>
	</div>
</div>
`;

exports[`field-container can mount field container with success 1`] = `
<div id="app">
	<div class="SharpFieldContainer SharpForm__form-item SharpForm__form-item--success">
		<label class="SharpForm__label">
			My beautiful field
			<!---->
		</label>
		<div>Template field</div>
		<div class="SharpForm__form-requirement"></div>
		<small class="SharpForm__help-message">Do not fill this field</small>
	</div>
</div>
`;
